--- a/configproblem/qaoa/qaoa_instance_evaluation.ipynb
+++ b/configproblem/qaoa/qaoa_instance_evaluation.ipynb
@@ -3,6 +3,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [],
    "source": [
     "# imports\n",
@@ -15,42 +18,25 @@
     "from pprint import pprint\n",
     "import numpy as np\n",
     "from qubovert import boolean_var"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [
-    "# define binary vars needed for problem instances\n",
-    "x1, x2, x3, x4, x5, x6 = boolean_var('x1'), boolean_var('x2'), boolean_var('x3'), boolean_var('x4'), boolean_var('x5'), boolean_var('x6')\n",
-    "\n",
-    "\n",
-    "# define set of problem instances to evaluate\n",
-    "problem_instances = [ProblemInstance([[(x1, True), (x2, True)],\n",
-    "                                      [(x2, True), (x3, False), (x4, True)],\n",
-    "                                      [(x3, True), (x5, False), (x6, False)]],\n",
-    "                                     [x1, x2, x3, x4, x5, x6],\n",
-    "                                     [30, 20, 25, 50, 10, 10],\n",
-    "                                     1000)]"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "scrolled": false
    },
    "outputs": [],
    "source": [
+    "# run config\n",
+    "run_print_hamiltonians = False\n",
+    "run_cost_landscape = False\n",
+    "run_puso_qaoa = True\n",
+    "run_quso_qaoa = True\n",
+    "\n",
+    "\n",
     "# cost landscape config\n",
-    "beta_gamma_step_size = 0.1\n",
+    "beta_gamma_step_size = 0.2\n",
     "\n",
     "# qaoa application config\n",
     "layers = 60 # more layers = higher approximation rate but more quantum errors when running on real qpu\n",
@@ -65,103 +51,182 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [],
+   "source": [
+    "# define binary vars needed for problem instances\n",
+    "x1, x2, x3, x4, x5, x6, x7, x8, x9, x10 = boolean_var('x1'), boolean_var('x2'), boolean_var('x3'), boolean_var('x4'), boolean_var('x5'), boolean_var('x6'), boolean_var('x7'), boolean_var('x8'), boolean_var('x9'), boolean_var('x10')\n",
+    "\n",
+    "\n",
+    "# define set of problem instances to evaluate\n",
+    "problem_instances = [ProblemInstance([[(x1, True), (x2, True)],\n",
+    "                                      [(x2, True), (x3, False), (x4, True)],\n",
+    "                                      [(x3, True), (x5, False), (x6, False)]],\n",
+    "                                     [x1, x2, x3, x4, x5, x6],\n",
+    "                                     [10, 10, 10, 10, 10, 10],\n",
+    "                                     1000),\n",
+    "                     # more variables\n",
+    "                     ProblemInstance([[(x1, True), (x2, True), (x7, False)],\n",
+    "                                      [(x2, True), (x3, False), (x4, True), (x8, False)],\n",
+    "                                      [(x3, True), (x5, False), (x6, False), (x9, True)]],\n",
+    "                                     [x1, x2, x3, x4, x5, x6, x7, x8, x9],\n",
+    "                                     [10, 10, 10, 10, 10, 10, 10, 10, 10],\n",
+    "                                     1000),\n",
+    "                     # more literals per clause\n",
+    "                     ProblemInstance([[(x1, True), (x2, True), (x3, False)],\n",
+    "                                      [(x2, True), (x3, False), (x4, True), (x5, True)],\n",
+    "                                      [(x3, True), (x5, False), (x6, False), (x7, False)]],\n",
+    "                                     [x1, x2, x3, x4, x5, x6, x7],\n",
+    "                                     [10, 10, 10, 10, 10, 10, 10],\n",
+    "                                     1000),\n",
+    "                     # more variables and move literals per clause\n",
+    "                     ProblemInstance([[(x1, True), (x2, True), (x7, False)],\n",
+    "                                      [(x2, True), (x3, False), (x4, True), (x8, False)],\n",
+    "                                      [(x3, True), (x5, False), (x6, False), (x9, True), (x10, False)]],\n",
+    "                                     [x1, x2, x3, x4, x5, x6, x7, x8, x9, x10],\n",
+    "                                     [10, 10, 10, 10, 10, 10, 10, 10, 10, 10],\n",
+    "                                     1000),\n",
+    "                     # less clauses\n",
+    "                     ProblemInstance([[(x1, True), (x2, True)],\n",
+    "                                      [(x2, True), (x3, False), (x4, True)]],\n",
+    "                                     [x1, x2, x3, x4],\n",
+    "                                     [10, 10, 10, 10],\n",
+    "                                     1000),\n",
+    "                     ProblemInstance([[(x1, True), (x2, True)],\n",
+    "                                      [(x3, True), (x5, False), (x6, False)]],\n",
+    "                                     [x1, x2, x3, x4, x5, x6],\n",
+    "                                     [10, 10, 10, 10, 10, 10],\n",
+    "                                     1000),\n",
+    "                     ProblemInstance([[(x2, True), (x3, False), (x4, True)],\n",
+    "                                      [(x3, True), (x5, False), (x6, False)]],\n",
+    "                                     [x1, x2, x3, x4, x5, x6],\n",
+    "                                     [10, 10, 10, 10, 10, 10],\n",
+    "                                     1000),\n",
+    "                     # more clauses\n",
+    "                     ProblemInstance([[(x1, True), (x2, True)],\n",
+    "                                      [(x2, True), (x3, False), (x4, True)],\n",
+    "                                      [(x3, True), (x5, False), (x6, False)],\n",
+    "                                      [(x4, True), (x6, True)]],\n",
+    "                                     [x1, x2, x3, x4, x5, x6],\n",
+    "                                     [10, 10, 10, 10, 10, 10],\n",
+    "                                     1000),\n",
+    "                     # even more clauses\n",
+    "                     ProblemInstance([[(x1, True), (x2, True)],\n",
+    "                                      [(x2, True), (x3, False), (x4, True)],\n",
+    "                                      [(x3, True), (x5, False), (x6, False)],\n",
+    "                                      [(x4, True), (x6, True)],\n",
+    "                                      [(x1, False), (x4, False), (x5, True)]],\n",
+    "                                     [x1, x2, x3, x4, x5, x6],\n",
+    "                                     [10, 10, 10, 10, 10, 10],\n",
+    "                                     1000)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [],
    "source": [
     "# print hamiltonians\n",
     "for index, instance in enumerate(problem_instances):\n",
-    "    print(f\"Instance {index}:\")\n",
-    "    pprint(instance.get_puso_combined_hamiltonian())"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+    "    if run_print_hamiltonians:\n",
+    "        print(f\"Instance {index}:\")\n",
+    "        pprint(instance.get_puso_combined_hamiltonian())"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [],
    "source": [
     "# plot cost landscape\n",
-    "for index, instance in enumerate(problem_instances):\n",
-    "    print(f\"Instance {index}:\")\n",
-    "    hamiltonians = [{'hamiltonian': instance.get_puso_sat_hamiltonian(), 'name': 'SAT'},\n",
-    "                    {'hamiltonian': instance.get_cost_hamiltonian(), 'name': 'COST'},\n",
-    "                    {'hamiltonian': instance.get_puso_combined_hamiltonian(), 'name': 'COMBINED'}]\n",
-    "    strategies = ['min', 'avg', 'top']\n",
-    "    plot_beta_gamma_cost_landscape(quso_problem_circuit, hamiltonians, strategies, instance.get_num_features(), beta_gamma_step_size)\n",
-    "    plot_f_mu_cost_landscape(instance.get_puso_combined_hamiltonian(), instance.get_num_features())"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+    "if run_cost_landscape:\n",
+    "    for index, instance in enumerate(problem_instances):\n",
+    "        print(f\"Instance {index}:\")\n",
+    "        hamiltonians = [{'hamiltonian': instance.get_puso_sat_hamiltonian(), 'name': 'SAT'},\n",
+    "                        {'hamiltonian': instance.get_cost_hamiltonian(), 'name': 'COST'},\n",
+    "                        {'hamiltonian': instance.get_puso_combined_hamiltonian(), 'name': 'COMBINED'}]\n",
+    "        strategies = ['min', 'avg', 'top']\n",
+    "        plot_beta_gamma_cost_landscape(quso_problem_circuit, hamiltonians, strategies, instance.get_num_features(), beta_gamma_step_size)\n",
+    "        plot_f_mu_cost_landscape(instance.get_puso_combined_hamiltonian(), instance.get_num_features())"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "# plot PUBO results\n",
-    "for index, instance in enumerate(problem_instances):\n",
-    "    print(f\"Instance {index}:\")\n",
-    "    hamiltonian = instance.get_puso_combined_hamiltonian()\n",
+    "if run_puso_qaoa:\n",
+    "    for index, instance in enumerate(problem_instances):\n",
+    "        print(f\"Instance {index}:\")\n",
+    "        hamiltonian = instance.get_puso_combined_hamiltonian()\n",
     "\n",
-    "    probabilities, _ = apply_qaoa_statevector(puso_problem_circuit, hamiltonian, layers, get_hamiltonian_dimension(hamiltonian), theta, warmstart_statevector, strategy=strategy, use_optimizer=use_optimizer, print_res=print_res)\n",
-    "    probabilities_dict = {}\n",
-    "    for i in range(0, 2 ** get_hamiltonian_dimension(hamiltonian)):\n",
-    "        probabilities_dict[(np.binary_repr(i, width=get_hamiltonian_dimension(hamiltonian)))] = round(probabilities[i], 4)\n",
+    "        probabilities, _ = apply_qaoa_statevector(puso_problem_circuit, hamiltonian, layers, get_hamiltonian_dimension(hamiltonian), theta, warmstart_statevector, strategy=strategy, use_optimizer=use_optimizer, print_res=print_res)\n",
+    "        probabilities_dict = {}\n",
+    "        for i in range(0, 2 ** get_hamiltonian_dimension(hamiltonian)):\n",
+    "            probabilities_dict[(np.binary_repr(i, width=get_hamiltonian_dimension(hamiltonian)))] = round(probabilities[i], 4)\n",
     "\n",
-    "    plot_counts_histogram(probabilities_dict, get_hamiltonian_dimension(hamiltonian), instance.get_best_config(), instance.get_valid_configs())"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+    "        plot_counts_histogram(probabilities_dict, get_hamiltonian_dimension(hamiltonian), instance.get_best_config(), instance.get_valid_configs())"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [],
    "source": [
     "# plot quadratized QUBO results\n",
-    "for index, instance in enumerate(problem_instances):\n",
-    "    print(f\"Instance {index}:\")\n",
-    "    hamiltonian = instance.get_quso_combined_hamiltonian()\n",
+    "if run_quso_qaoa:\n",
+    "    for index, instance in enumerate(problem_instances):\n",
+    "        print(f\"Instance {index}:\")\n",
+    "        hamiltonian = instance.get_quso_combined_hamiltonian()\n",
     "\n",
-    "    probabilities, _ = apply_qaoa_statevector(quso_problem_circuit, hamiltonian, layers, get_hamiltonian_dimension(hamiltonian), theta, warmstart_statevector, strategy=strategy, use_optimizer=use_optimizer, print_res=print_res)\n",
-    "    probabilities_dict = {}\n",
-    "    for i in range(0, 2 ** get_hamiltonian_dimension(hamiltonian)):\n",
-    "        probabilities_dict[np.binary_repr(i, width=get_hamiltonian_dimension(hamiltonian))] = probabilities[i]\n",
+    "        probabilities, _ = apply_qaoa_statevector(quso_problem_circuit, hamiltonian, layers, get_hamiltonian_dimension(hamiltonian), theta, warmstart_statevector, strategy=strategy, use_optimizer=use_optimizer, print_res=print_res)\n",
+    "        probabilities_dict = {}\n",
+    "        for i in range(0, 2 ** get_hamiltonian_dimension(hamiltonian)):\n",
+    "            probabilities_dict[np.binary_repr(i, width=get_hamiltonian_dimension(hamiltonian))] = probabilities[i]\n",
     "\n",
-    "    probabilities_dict = convert_ancilla_bit_results(probabilities_dict, instance.get_num_features())\n",
+    "        probabilities_dict = convert_ancilla_bit_results(probabilities_dict, instance.get_num_features())\n",
     "\n",
-    "    for key in probabilities_dict:\n",
-    "        probabilities_dict[key] = round(probabilities_dict[key], 4)\n",
+    "        for key in probabilities_dict:\n",
+    "            probabilities_dict[key] = round(probabilities_dict[key], 4)\n",
     "\n",
-    "    plot_counts_histogram(probabilities_dict, instance.get_num_features(), instance.get_best_config(), instance.get_valid_configs())"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+    "        plot_counts_histogram(probabilities_dict, instance.get_num_features(), instance.get_best_config(), instance.get_valid_configs())"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.6"
+   "pygments_lexer": "ipython3",
+   "version": "3.9.13"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 0
+ "nbformat_minor": 1
 }
