--- a/configproblem/qaoa/qaoa_mincost_sat.ipynb
+++ b/configproblem/qaoa/qaoa_mincost_sat.ipynb
@@ -109,7 +109,7 @@
    "outputs": [],
    "source": [
     "# Uniform Superposition Initialization\n",
-    "from fragments.quantum_states import superposition_circuit, add_all_hadamards\n",
+    "from configproblem.fragments.quantum_states import superposition_circuit, add_all_hadamards\n",
     "%psource superposition_circuit\n",
     "%psource add_all_hadamards"
    ]
@@ -141,7 +141,7 @@
    "outputs": [],
    "source": [
     "# Mixer Hamiltonian\n",
-    "from qaoa_mincost_sat import mixer_circuit\n",
+    "from qaoa_application import mixer_circuit\n",
     "%psource mixer_circuit"
    ]
   },
@@ -238,7 +238,7 @@
    "outputs": [],
    "source": [
     "# QAOA Circuit\n",
-    "from qaoa_mincost_sat import qaoa_circuit\n",
+    "from qaoa_application import qaoa_circuit\n",
     "%psource qaoa_circuit"
    ]
   },
@@ -249,7 +249,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "example_qaoa_circuit, _, _ = qaoa_circuit(sat_hamiltonian, 6, 1)\n",
+    "example_qaoa_circuit, _, _ = qaoa_circuit(problem_circuit, sat_hamiltonian, 6, 1)\n",
     "example_qaoa_circuit.draw(output=\"mpl\")"
    ]
   },
@@ -270,7 +270,7 @@
    "outputs": [],
    "source": [
     "# QAOA Quantum Procedure\n",
-    "from qaoa_mincost_sat import quantum\n",
+    "from qaoa_application import quantum\n",
     "%psource quantum"
    ]
   },
@@ -281,7 +281,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "counts, qc = quantum(sat_hamiltonian, 6, 1, 1, 1)\n",
+    "counts, qc = quantum(problem_circuit, sat_hamiltonian, 6, 1, 1, 1)\n",
     "qc.draw(output=\"mpl\")"
    ]
   },
@@ -411,7 +411,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from util.hamiltonian_math import solve_bruteforce\n",
+    "from configproblem.util.hamiltonian_math import solve_bruteforce\n",
     "%psource solve_bruteforce"
    ]
   },
@@ -453,7 +453,7 @@
     "x1, x2, x3, x4, x5, x6 = boolean_var('x1'), boolean_var('x2'), boolean_var('x3'), boolean_var('x4'), boolean_var('x5'), boolean_var('x6')\n",
     "\n",
     "# SAT Penalty\n",
-    "alpha_sat = 300 # 1e6\n",
+    "alpha_sat = 500 # 1e6\n",
     "\n",
     "# SAT QUBO\n",
     "sat_model = alpha_sat * (2 - x1 - x2 - x3 - x4 + x5 + x1 * x2 + 2 * x3 * x4 - x5 * x6)\n",
@@ -488,7 +488,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from util.hamiltonian_math import compute_config_energy\n",
+    "from configproblem.util.hamiltonian_math import compute_config_energy\n",
     "%psource compute_config_energy"
    ]
   },
@@ -508,7 +508,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from util.hamiltonian_math import compute_hamiltonian_energy, hamiltonian_strategy_average, hamiltonian_strategy_top, hamiltonian_strategy_min\n",
+    "from configproblem.util.hamiltonian_math import compute_hamiltonian_energy, hamiltonian_strategy_average, hamiltonian_strategy_top, hamiltonian_strategy_min\n",
     "%psource compute_hamiltonian_energy\n",
     "%psource hamiltonian_strategy_average\n",
     "%psource hamiltonian_strategy_top\n",
@@ -532,7 +532,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from qaoa_mincost_sat import get_expectation\n",
+    "from qaoa_application import get_expectation\n",
     "%psource get_expectation"
    ]
   },
@@ -543,13 +543,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from util.visualization import plot_beta_gamma_cost_landscape, plot_f_mu_cost_landscape\n",
+    "from configproblem.util.visualization import plot_beta_gamma_cost_landscape, plot_f_mu_cost_landscape\n",
     "# Plot cost landscape for different values of beta and gamma\n",
     "hamiltonians = [{'hamiltonian': sat_hamiltonian, 'name': 'SAT'},\n",
     "                {'hamiltonian': cost_model.to_quso(), 'name': 'COST'},\n",
     "                {'hamiltonian': combined_hamiltonian, 'name': 'COMBINED'}]\n",
     "strategies = ['min', 'avg', 'top']\n",
-    "plot_beta_gamma_cost_landscape(hamiltonians, strategies, 6, 0.2)\n",
+    "plot_beta_gamma_cost_landscape(problem_circuit, hamiltonians, strategies, 6, 0.2)\n",
     "\n",
     "# Plot cost landscape for different f and mu\n",
     "plot_f_mu_cost_landscape(combined_hamiltonian, 6)"
@@ -571,7 +571,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from qaoa_mincost_sat import apply_qaoa\n",
+    "from qaoa_application import apply_qaoa\n",
     "%psource apply_qaoa"
    ]
   },
@@ -606,13 +606,14 @@
     "n_features = 6\n",
     "shots = 256\n",
     "theta = {\"beta\": 0.01, \"gamma\": -0.01} # start values for optimization\n",
+    "strategy = 'min'\n",
     "use_warmstart = False\n",
     "use_optimizer = True\n",
     "\n",
     "if not use_warmstart:\n",
     "    warmstart_statevector = None\n",
     "\n",
-    "counts, qc = apply_qaoa(hamiltonian, layers, n_features, shots, theta, warmstart_statevector, use_optimizer)"
+    "counts, qc = apply_qaoa(problem_circuit, hamiltonian, layers, n_features, shots, theta, warmstart_statevector, strategy=strategy, use_optimizer=use_optimizer)"
    ]
   },
   {
@@ -633,7 +634,7 @@
    "outputs": [],
    "source": [
     "# Pretty Print the results of the previous Cell\n",
-    "from util.visualization import plot_counts_histogram\n",
+    "from configproblem.util.visualization import plot_counts_histogram\n",
     "\n",
     "best_config = \"000110\" # 654321\n",
     "valid_configs = [\"101010\", \"101001\", \"101011\", \"100110\", \"100101\", \"100111\", \"001010\", \"001001\", \"001011\", \"000101\", \"000111\", \"111010\", \"111001\", \"111011\", \"110110\", \"110101\", \"110111\"]\n",
@@ -644,27 +645,26 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a16a4440",
-   "metadata": {},
    "outputs": [],
    "source": [
     "# Visualize results using the StatevectorSimulator\n",
-    "from qaoa_mincost_sat import apply_qaoa_statevector\n",
+    "from qaoa_application import apply_qaoa_statevector\n",
     "import numpy as np\n",
     "\n",
-    "probabilities, qc = apply_qaoa_statevector(hamiltonian, layers, n_features, theta, warmstart_statevector, use_optimizer, print_res=False)\n",
+    "probabilities, _ = apply_qaoa_statevector(problem_circuit, hamiltonian, layers, n_features, theta, warmstart_statevector, strategy=strategy, use_optimizer=use_optimizer, print_res=False)\n",
     "probabilities_dict = {}\n",
-    "for i in range(0, 2 ** 6):\n",
+    "for i in range(0, 2 ** n_features):\n",
     "    probabilities_dict[(np.binary_repr(i, width=6))] = round(probabilities[i], 4)\n",
     "\n",
     "plot_counts_histogram(probabilities_dict, best_config, valid_configs)"
-   ]
+   ],
+   "metadata": {
+    "collapsed": false
+   }
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b568b60b",
-   "metadata": {},
    "outputs": [],
    "source": [
     "# prioritization of features\n",
@@ -712,7 +712,10 @@
     "        if print_debug_output:\n",
     "            print(\"Invalid config \" + str(config))\n",
     "print(\"Average difference: \" + str(average_difference/len(config_cost)))"
-   ]
+   ],
+   "metadata": {
+    "collapsed": false
+   }
   }
  ],
  "metadata": {
@@ -731,7 +734,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.10.11"
   },
   "vscode": {
    "interpreter": {
