--- a/configproblem/qaoa/qaoa_instance_evaluation.ipynb
+++ b/configproblem/qaoa/qaoa_instance_evaluation.ipynb
@@ -162,22 +162,57 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [],
    "source": [
     "# plot PUBO results\n",
+    "probabilities_list = []\n",
     "if run_puso_qaoa:\n",
     "    for index, instance in enumerate(problem_instances):\n",
     "        print(f\"Instance {index}:\")\n",
     "        hamiltonian = instance.get_puso_combined_hamiltonian()\n",
     "\n",
     "        probabilities, _ = apply_qaoa_statevector(puso_problem_circuit, hamiltonian, layers, get_hamiltonian_dimension(hamiltonian), theta, warmstart_statevector, strategy=strategy, use_optimizer=use_optimizer, print_res=print_res)\n",
+    "        probabilities_list.append(probabilities)\n",
     "        probabilities_dict = {}\n",
     "        for i in range(0, 2 ** get_hamiltonian_dimension(hamiltonian)):\n",
     "            probabilities_dict[(np.binary_repr(i, width=get_hamiltonian_dimension(hamiltonian)))] = round(probabilities[i], 4)\n",
     "\n",
     "        plot_counts_histogram(probabilities_dict, get_hamiltonian_dimension(hamiltonian), instance.get_best_config(), instance.get_valid_configs())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# rank instances by result_quality = success_probability * 2^num_features / num_valid_configs\n",
+    "if run_puso_qaoa:\n",
+    "    result_quality_list = []\n",
+    "    for index, instance in enumerate(problem_instances):\n",
+    "        # determine result quality\n",
+    "        probabilities = probabilities_list[index]\n",
+    "        probabilities_dict = {}\n",
+    "        for i in range(0, 2 ** get_hamiltonian_dimension(instance.get_puso_combined_hamiltonian())):\n",
+    "            probabilities_dict[(np.binary_repr(i, width=get_hamiltonian_dimension(instance.get_puso_combined_hamiltonian())))] = probabilities[i]\n",
+    "\n",
+    "        result_quality = 0\n",
+    "        for config in instance.get_valid_configs():\n",
+    "            result_quality += probabilities_dict[config]\n",
+    "        result_quality *= 2 ** instance.get_num_features() / len(instance.get_valid_configs())\n",
+    "        result_quality_list.append(result_quality)\n",
+    "\n",
+    "    # sort instances by result_quality\n",
+    "    sorted_indices = np.argsort(result_quality_list)\n",
+    "    sorted_indices = sorted_indices[::-1]\n",
+    "    sorted_problem_instances = [problem_instances[i] for i in sorted_indices]\n",
+    "    success_probabilities_per_valid_config_list = [result_quality_list[i] for i in sorted_indices]\n",
+    "    for index, instance in enumerate(sorted_problem_instances):\n",
+    "        print(f\"Instance {sorted_indices[index]}:\")\n",
+    "        print(str(instance))\n",
+    "        print(f\"Result quality: {result_quality_list[sorted_indices[index]]}\")"
    ]
   },
   {
@@ -189,6 +224,7 @@
    "outputs": [],
    "source": [
     "# plot quadratized QUBO results\n",
+    "probabilities_dict_list = []\n",
     "if run_quso_qaoa:\n",
     "    for index, instance in enumerate(problem_instances):\n",
     "        print(f\"Instance {index}:\")\n",
@@ -200,11 +236,41 @@
     "            probabilities_dict[np.binary_repr(i, width=get_hamiltonian_dimension(hamiltonian))] = probabilities[i]\n",
     "\n",
     "        probabilities_dict = convert_ancilla_bit_results(probabilities_dict, instance.get_num_features())\n",
+    "        probabilities_dict_list.append(probabilities_dict)\n",
     "\n",
     "        for key in probabilities_dict:\n",
     "            probabilities_dict[key] = round(probabilities_dict[key], 4)\n",
     "\n",
     "        plot_counts_histogram(probabilities_dict, instance.get_num_features(), instance.get_best_config(), instance.get_valid_configs())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# rank instances by result_quality = success_probability * 2^num_features / num_valid_configs\n",
+    "if run_quso_qaoa:\n",
+    "    result_quality_list = []\n",
+    "    for index, instance in enumerate(problem_instances):\n",
+    "        # determine result quality\n",
+    "        probabilities_dict = probabilities_dict_list[index]\n",
+    "        result_quality = 0\n",
+    "        for config in instance.get_valid_configs():\n",
+    "            result_quality += probabilities_dict[config]\n",
+    "        result_quality *= 2 ** instance.get_num_features() / len(instance.get_valid_configs())\n",
+    "        result_quality_list.append(result_quality)\n",
+    "\n",
+    "    # sort instances by result_quality\n",
+    "    sorted_indices = np.argsort(result_quality_list)\n",
+    "    sorted_indices = sorted_indices[::-1]\n",
+    "    sorted_problem_instances = [problem_instances[i] for i in sorted_indices]\n",
+    "    success_probabilities_per_valid_config_list = [result_quality_list[i] for i in sorted_indices]\n",
+    "    for index, instance in enumerate(sorted_problem_instances):\n",
+    "        print(f\"Instance {sorted_indices[index]}:\")\n",
+    "        print(str(instance))\n",
+    "        print(f\"Result quality: {result_quality_list[sorted_indices[index]]}\")"
    ]
   }
  ],
